--- a/content/Knowledge/Web/Zen Jaskiniowca/5W5H.md
+++ b/content/Knowledge/Web/Zen Jaskiniowca/5W5H.md
@@ -6,4 +6,4 @@ title: 5W5H
 >
 > Jak powszechnie wiadomo (a może nie wiadomo?) nikogo tak dobrze nie **oszukujemy** jak **samych siebie**. Przefiltrowanie się przez 5 kręgów piekielnego **'dlaczego?’** skutkuje ujrzeniem tego przed czym się wzbraniamy – prawdy…
 
-[Read full article](https://zenjaskiniowca.pl/5w5h/)
+[Read the full article](https://zenjaskiniowca.pl/5w5h/)
